--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,18 @@
   <artifactId>ambari-installation</artifactId>
   <packaging>jar</packaging>
   <version>0.0.1-SNAPSHOT</version>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
   <name>Ambari: Server</name>
 
   <properties>
