--- a/pom.xml
+++ b/pom.xml
@@ -201,7 +201,7 @@
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
-      <version>2.53.1</version>
+      <version>3.12.0</version>
       <scope>test</scope>
       <exclusions>
         <exclusion>
@@ -259,8 +259,17 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
-
-
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.6</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.rauschig</groupId>
+      <artifactId>jarchivelib</artifactId>
+      <version>0.7.1</version>
+    </dependency>
   </dependencies>
 
   <profiles>
